Fixes invoice concatination